Added TheCrashStand.vpk Completed work on Crash Course Completed work on The Last Stand Adjusted finale boss spawning settings for Crash Course and The Last Stand c12m2 Fixed collision issue on added train by the end saferoom

--- a/cfg/cfgogl/boss_spawns.cfg
+++ b/cfg/cfgogl/boss_spawns.cfg
@@ -8,7 +8,6 @@ static_tank_map c4m5_milltown_escape
 static_tank_map c5m5_bridge
 static_tank_map c7m1_docks
 static_tank_map c7m3_port
-static_tank_map c9m2_alleys
 static_tank_map l4d2_darkblood04_extraction
 static_tank_map x1m5_salvation
 static_tank_map uf4_airfield
@@ -24,9 +23,11 @@ static_tank_map dkr_m5_stadium
 tank_map_flow_and_second_event c2m5_concert
 tank_map_flow_and_second_event c3m4_plantation
 tank_map_flow_and_second_event c8m5_rooftop
+tank_map_flow_and_second_event c9m2_lots
 tank_map_flow_and_second_event c10m5_houseboat
 tank_map_flow_and_second_event c11m5_runway
 tank_map_flow_and_second_event c12m5_cornfield
+tank_map_flow_and_second_event c14m2_lighthouse
 
 // Finales with a single first event Tank
 tank_map_only_first_event c1m4_atrium
