--- a/cfg/stripper/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/maps/c12m2_traintunnel.cfg
@@ -441,6 +441,18 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Clipping on train to fix collision issue
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1855 -9577 116"
+	"angles" "-10 112.5 0"
+	"mins" "-69 -46 -2"
+	"maxs" "69 46 2"
+	"boxmins" "-69 -46 -2"
+	"boxmaxs" "69 46 2"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Block LOS under train
 {
 	"classname" "logic_auto"
