c9m2 made the finale start generator glow c9m2 added some more infected ladders c12m4 added some additional hints for the new path c12m4 removed unreachable pill spawn in the warehouse

--- a/cfg/stripper/maps/c12m4_barn.cfg
+++ b/cfg/stripper/maps/c12m4_barn.cfg
@@ -23,6 +23,11 @@ filter:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+; --- Remove unreachable pill spawns in warehouse
+filter:
+{
+	"hammerid" "1506770"
+}
 ; --- Make both T1 guns always spawn in warehouse
 modify:
 {
@@ -731,6 +736,12 @@ add:
 	"model" "models/props_rooftop/gutter_pipe_256.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+	"lightingorigin" "gutter_pipe_lighting"
+}
+{
+	"classname" "info_target"
+	"origin" "10624 -8729 272"
+	"targetname" "gutter_pipe_lighting"
 }
 ; --- Infected ladder to get on warehouse roof from right corner
 {
@@ -890,6 +901,11 @@ add:
 	"OnMapSpawn" "warehouse_button_glow_trigger,AddOutput,boxmins -204 -212 -134,0,-1"
 	"OnMapSpawn" "warehouse_button_glow_trigger,AddOutput,boxmaxs 204 212 134,0,-1"
 	"OnMapSpawn" "warehouse_button_glow_trigger,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "warehouse_button_glow_trigger2,AddOutput,mins -270 -192 -180,0,-1"
+	"OnMapSpawn" "warehouse_button_glow_trigger2,AddOutput,maxs 270 192 180,0,-1"
+	"OnMapSpawn" "warehouse_button_glow_trigger2,AddOutput,boxmins -270 -192 -180,0,-1"
+	"OnMapSpawn" "warehouse_button_glow_trigger2,AddOutput,boxmaxs 270 192 180,0,-1"
+	"OnMapSpawn" "warehouse_button_glow_trigger2,AddOutput,solid 2,0,-1"
 }
 ; --- Front door
 {
@@ -1003,13 +1019,26 @@ add:
 	"OnPressed" "warehouse_door_front_brush,Kill,,5,-1"
 	"OnPressed" "warehouse_door_back_brush,Kill,,5,-1"
 	"OnPressed" "warehouse_door_window_brush,Kill,,5,-1"
+	; --- Kill glow hints
 	"OnPressed" "warehouse_button_glow_trigger,Kill,,0,-1"
+	"OnPressed" "warehouse_button_glow_trigger2,Kill,,0,-1"
+	"OnPressed" "warehouse_button_prop_glow,StopGlowing,,0,-1"
+	"OnPressed" "warehouse_button_prop_glow_back,StopGlowing,,0,-1"
 }
-; --- Trigger to make button flash if survivors try to enter through the front
+; --- Triggers to make button flash if survivors try to enter through the front
 {
 	"classname" "trigger_multiple"
 	"origin" "10468 -8892 58"
 	"targetname" "warehouse_button_glow_trigger"
+	"filtername" "filter_survivor"
+	"spawnflags" "1"
+	"OnStartTouch" "warehouse_glow_prop_timer,Enable,,0,-1"
+	"OnEndTouchAll" "warehouse_glow_prop_timer,Disable,,10,-1"
+}
+{
+	"classname" "trigger_multiple"
+	"origin" "11854 -8048 68"
+	"targetname" "warehouse_button_glow_trigger2"
 	"filtername" "filter_survivor"
 	"spawnflags" "1"
 	"OnStartTouch" "warehouse_glow_prop_timer,Enable,,0,-1"
@@ -1024,6 +1053,12 @@ add:
 	"OnTimer" "warehouse_button_prop_glow_back,StartGlowing,,0,-1"
 	"OnTimer" "warehouse_button_prop_glow,StopGlowing,,0.5,-1"
 	"OnTimer" "warehouse_button_prop_glow_back,StopGlowing,,0.5,-1"
+}
+; --- Arrow decal
+{
+	"classname" "infodecal"
+	"origin" "10624 -9014 48"
+	"texture" "decals/checkpointarrow01_orange"
 }
 
 ; =====================================================
