--- a/cfg/stripper/maps/c9m2_lots.cfg
+++ b/cfg/stripper/maps/c9m2_lots.cfg
@@ -57,6 +57,49 @@ modify:
 		"OnFullyOpen" "generator_start_particles,Start,,0,-1"
 	}
 }
+; --- Make the finale start generator glow when survivors enter the area
+modify:
+{
+	match:
+	{
+		"targetname" "finale_button_unlocker"
+	}
+	insert:
+	{
+		"OnEntireTeamStartTouch" "finale_generator_glow_timer,Enable,,0,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "finaleswitch_initial"
+	}
+	insert:
+	{
+		"OnTimeUp" "finale_generator_glow_prop,Kill,,0,-1"
+		"OnTimeUp" "finale_generator_glow_timer,Kill,,0,-1"
+	}
+}
+add:
+{
+	"classname" "logic_timer"
+	"targetname" "finale_generator_glow_timer"
+	"StartDisabled" "1"
+	"RefireTime" "1"
+	"OnTimer" "finale_generator_glow_prop,StartGlowing,,0,-1"
+	"OnTimer" "finale_generator_glow_prop,StopGlowing,,0.5,-1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "6847.22 5880.3 40.979"
+	"angles" "0 31 0"
+	"model" "models/props_vehicles/floodlight_generator_pose02_static.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"targetname" "finale_generator_glow_prop"
+	"rendermode" "10"
+	"glowrangemin" "350"
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -376,6 +419,39 @@ add:
 	"angles" "0 0 0"
 	"model" "*182"
 	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on the upper roof by the alarm car, above the shipping yard warehouse to access the skylight
+{
+	"classname" "func_simpleladder"
+	"origin" "-1796 -5519 -39"
+	"angles" "0 0 0"
+	"model" "*30"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb up warehouse shelves in the shipping yard area
+{
+	"classname" "func_simpleladder"
+	"origin" "2639 -1872 -72"
+	"angles" "0 0 0"
+	"model" "*35"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb up a truck by the fire barrel
+{
+	"classname" "func_simpleladder"
+	"origin" "7712 7038 -8"
+	"angles" "0 180 0"
+	"model" "*189"
+	"normal.x" "1.00"
 	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
