c2m2 Prevented players from activating the shooting gallery to troll c2m2 Allowed players to take the gnome without completing the shooting gallery c3m1 Bridge to allow infected to get to the other side of the river if they spawn on survivors in the ferry c5m4 Improved clipping around tree outside saferoom

--- a/cfg/stripper/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/maps/c5m4_quarter.cfg
@@ -285,28 +285,52 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
+55
+-45
 ; --- Clipping around tree by the saferoom to stop players getting stuck as easily
 {
 	"classname" "env_physics_blocker"
-	"origin" "-3118 4558 101"
-	"mins" "-9 -18 -14"
-	"maxs" "9 18 14"
+	"origin" "-3090 4559 99"
+	"angles" "0 0 55"
+	"mins" "-20 -2 -30"
+	"maxs" "20 2 30"
+	"boxmins" "-20 -2 -30"
+	"boxmaxs" "20 2 30"
 	"initialstate" "1"
 	"BlockType" "0"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "-3118 4585 102"
-	"mins" "-14 -7 -7"
-	"maxs" "14 7 7"
+	"origin" "-3090 4517 100"
+	"mins" "-20 -19 -18"
+	"maxs" "20 19 18"
 	"initialstate" "1"
 	"BlockType" "0"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "-3091 4516 98"
-	"mins" "-19 -23 -8"
-	"maxs" "19 23 8"
+	"origin" "-3090 4483 100"
+	"angles" "0 0 -45"
+	"mins" "-20 -2 -24"
+	"maxs" "20 2 24"
+	"boxmins" "-20 -2 -24"
+	"boxmaxs" "20 2 24"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3118 4558 98"
+	"mins" "-9 -18 -11"
+	"maxs" "9 18 11"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3119 4585 102"
+	"mins" "-13 -6 -7"
+	"maxs" "13 6 7"
 	"initialstate" "1"
 	"BlockType" "0"
 }
