c1m1 Blocked elevator navs until doors are open to fix pathing and spawning issues c3m3 Made the gun by the lantern before the event always spawn and adjusted positioning c5m3 Blocked being able to climb on the frames of one of the burned down buildings

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -266,18 +266,20 @@ add:
 ; --- Once placed these entities must be activated by firing either BlockNav or UnblockNav after a small delay
 ; --- teamToBlock defines which team's navs are affected, -1 = everyone, 2 = survivors, 3 = infected
 ; --- affectsFlow can be used when flow gets recalculated when the nav blocker is enabled or disabled, but it should only be used where the blocker will ALWAYS be the same for both teams
+; --- Recommended to leave at 0
 ; --- As it potentially causes issues with uneven tank spawns when one team may not activate the blocker but the other team does
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,mins [-x -y -z],0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,maxs [x y z],0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],[BlockNav/UnblockNav],,1,-1"
+	"OnMapSpawn" "[brush name],AddOutput,mins [-x -y -z],0,-1"
+	"OnMapSpawn" "[brush name],AddOutput,maxs [x y z],0,-1"
+	"OnMapSpawn" "[brush name],AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "[brush name],[BlockNav/UnblockNav],,1,-1"
 }
 {
 	"classname" "func_nav_blocker"
 	"origin" "[x y z]"
-	"targetname" "anv_mapfixes_losfix_[brush name]"
+	"targetname" "[brush name]"
 	"teamToBlock" "[n]"
+	"affectsFlow" "0"
 }
