c4m1/5 Fixed a jesus spot on a table in the burger tank (Replaces Valve's washer box) c4m2/3 Fixed a jesus spot on the spool by the 2 silos

--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -4,11 +4,11 @@
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
 ; --- Run nav fixes script
-; --- Fix 1. Fixes jesus spot on coaster fence by the first ramp
+; --- Fix 1: Fixes jesus spot on coaster fence by the first ramp
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "director,RunScriptFile,nav_fixes/c2m3_coaster_navfixes,0,-1"
+	"OnMapSpawn" "director,RunScriptFile,nav_fixes/c2m3_coaster_navfixes,20,-1"
 }
 
 
