--- a/cfg/cfgogl/boss_spawns.cfg
+++ b/cfg/cfgogl/boss_spawns.cfg
@@ -18,6 +18,7 @@ static_tank_map dkr_m2_carnival
 static_tank_map dkr_m3_tunneloflove
 static_tank_map dkr_m4_ferris
 static_tank_map dkr_m5_stadium
+static_tank_map cdta_05finalroad
 
 // Finales with flow + second event Tanks
 tank_map_flow_and_second_event c2m5_concert
