--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -55,6 +55,34 @@ modify:
 }
 
 ; =====================================================
+; ==                 ITEM DENSITY FIX                ==
+; ==   Fix item density being set to 0 on some maps  ==
+; =====================================================
+modify:
+; --- Ammo piles
+{
+	match:
+	{
+		"AmmoDensity" "0"
+	}
+	replace:
+	{
+		"AmmoDensity" "1"
+	}
+}
+; --- Pills
+{
+	match:
+	{
+		"PainPillDensity" "0"
+	}
+	replace:
+	{
+		"PainPillDensity" "1"
+	}
+}
+
+; =====================================================
 ; ==               T2 WEAPON SPAWN FIX               ==
 ; ==  Prevent director from spawning tier 2 weapons  ==
 ; =====================================================
