Small adjustments/fixes to DTA

--- a/cfg/stripper/maps/cdta_02road.cfg
+++ b/cfg/stripper/maps/cdta_02road.cfg
@@ -407,7 +407,7 @@ add:
 	"origin" "-2952 -60 -68"
 	"targetname" "anv_mapfixes_losfix_gas_station_pump_b"
 }
-; --- Soldifiy sign by the start of the event
+; --- Solidify sign by the start of the event
 {
 	"classname" "prop_dynamic"
 	"origin" "-6189 -6174 299"
@@ -721,7 +721,7 @@ add:
 ; --- Infected ladder to get over the fence before the event
 {
 	"classname" "func_simpleladder"
-	"origin" "12122.5 -12824.11 -159.33"
+	"origin" "-12122.5 -12824.11 -159.33"
 	"angles" "0 180 0"
 	"model" "*6"
 	"normal.x" "-0.99"
