c5m2 Fixed issues with horde warnings during event tanks, which was preventing the horde from relaxing as intended c5m2 Added a sound cue for when the horde is resumed due to progression

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -2650,10 +2650,11 @@ add:
 	"message" "Lilpeanut.GALLERY_SPAWN"
 	"targetname" "gnome_hello"
 	"spawnflags" "48"
-	"radius" "1250"
+	"radius" "0"
 	"pitchstart" "100"
 	"pitch" "100"
 	"health" "10"
+	"volstart" "10"
 }
 {
 	"classname" "ambient_generic"
@@ -2661,10 +2662,11 @@ add:
 	"message" "npc\moustachio\strengthattract05.wav"
 	"targetname" "gnome_trick1_snd"
 	"spawnflags" "48"
-	"radius" "1250"
+	"radius" "0"
 	"pitchstart" "100"
 	"pitch" "100"
 	"health" "10"
+	"volstart" "10"
 }
 {
 	"classname" "ambient_generic"
@@ -2672,10 +2674,11 @@ add:
 	"message" "npc\moustachio\strengthbreakmachine.wav"
 	"targetname" "gnome_trick2_snd"
 	"spawnflags" "48"
-	"radius" "1250"
+	"radius" "0"
 	"pitchstart" "100"
 	"pitch" "100"
 	"health" "10"
+	"volstart" "10"
 }
 {
 	"classname" "ambient_generic"
@@ -2683,10 +2686,11 @@ add:
 	"message" "npc\virgil\c3end52.wav"
 	"targetname" "gnome_trick3_snd"
 	"spawnflags" "48"
-	"radius" "1250"
+	"radius" "0"
 	"pitchstart" "100"
 	"pitch" "100"
 	"health" "10"
+	"volstart" "10"
 }
 {
 	"classname" "info_particle_system"
@@ -2806,10 +2810,11 @@ add:
 	"message" "junkyard.plane_engine_explosion"
 	"targetname" "gnome_explosion_snd"
 	"spawnflags" "48"
-	"radius" "1250"
+	"radius" "0"
 	"pitchstart" "100"
 	"pitch" "100"
 	"health" "10"
+	"volstart" "10"
 }
 {
 	"classname" "ambient_generic"
@@ -2817,8 +2822,9 @@ add:
 	"message" "Lilpeanut.GALLERY_HIT"
 	"targetname" "gnome_explosion_snd"
 	"spawnflags" "48"
-	"radius" "1250"
+	"radius" "0"
 	"pitchstart" "100"
 	"pitch" "100"
 	"health" "10"
+	"volstart" "10"
 }
