--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -27,7 +27,7 @@ modify:
 	}
 	insert:
 	{
-		"OnStartTouch" "director,BeginScript,director_onslaught_rework_c5m2.nut,1,-1"
+		"OnStartTouch" "director,BeginScript,director_onslaught_rework_c5m2,1,-1"
 	}
 }
 ; --- Run script to check survivor flow progression
@@ -36,7 +36,7 @@ add:
 	"classname" "logic_timer"
 	"targetname" "OnslaughtFlowChecker"
 	"StartDisabled" "1"
-	"RefireTime" "5"
+	"RefireTime" "1"
 	"vscripts" "director_onslaught_flow_checker"
 	; --- Check survivor flow periodically
 	"OnTimer" "OnslaughtFlowChecker,RunScriptCode,OnslaughtCheckFlow(),0,-1"
