--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -21,7 +21,7 @@
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
 add:
-; --- Ammo pile outside 2-story house just before the town
+; --- Ammo pile outside the 2-story house just before the town
 {
 	"classname" "weapon_ammo_spawn"
 	"origin" "-7864 8698 64"
