Completed work on No Mercy Fixed a potential issue that could cause static weapon spawns not to spawn Made the green and blue trash can props unmovable Increased ammo density for maps with 0 ammo density c4m2/3 Fixed guns in the gas station saferoom falling to the ground c5m3 Fixed some minor flow issues due to the cemetery pathing (less than 1% flow inaccuracy) c9m2 Made clipping to get into escape vehicle without jumping only active after escape sequence is started c12m4 Changed ban range to 39 - 54 c2m1 Added a bus and additional tree by the saferoom, removed the humvee and van

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -67,7 +67,7 @@ modify:
 	}
 	replace:
 	{
-		"AmmoDensity" "1"
+		"AmmoDensity" "2"
 	}
 }
 ; --- Pills
@@ -100,6 +100,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "tier1_shotgun"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -114,6 +115,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "tier1_shotgun"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -128,6 +130,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "any_smg"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -142,6 +145,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "any_smg"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -156,6 +160,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "any_smg"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -170,6 +175,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "any_smg"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -184,6 +190,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "tier1_any"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -198,6 +205,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "tier1_any"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -212,6 +220,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "tier1_any"
+		"spawn_without_director" "1"
 	}
 }
 {
@@ -226,6 +235,7 @@ modify:
 	insert:
 	{
 		"weapon_selection" "tier1_any"
+		"spawn_without_director" "1"
 	}
 }
 ; --- Convert T2 weapon spawns into T1
@@ -421,20 +431,6 @@ modify:
 ; ==           INFECTED CLIP / TRIGGER FIX           ==
 ; ==  Remove or fix clips and triggers for infected  ==
 ; =====================================================
-; --- First, prevent a useful (non-restrictive) clip on c12m3 from being removed
-modify:
-{
-	match:
-	{
-		"hammerid" "2495986"
-		"targetname" "bridge_pz_clip"
-	}
-	replace:
-	{
-		; --- Convert the entity type back in c12m3_bridge.cfg
-		"classname" "func_brush"
-	}
-}
 ; --- Remove infected clips
 filter:
 {
@@ -2187,7 +2183,29 @@ modify:
 		"spawnflags" "8"
 	}
 }
-
+; --- Trash Cans
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_street/trashbin01.mdl"
+	}
+	replace:
+	{
+		"spawnflags" "8"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_junk/trashbin01a.mdl"
+	}
+	replace:
+	{
+		"spawnflags" "8"
+	}
+}
 ; --- TEMPORARY FIXES - Until certain campaigns are fully reworked, remove some problematic immovable props through global filters
 filter:
 ; --- c10m2 - Fallen oil barrel
