--- a/cfg/stripper/maps/c12m3_bridge.cfg
+++ b/cfg/stripper/maps/c12m3_bridge.cfg
@@ -715,18 +715,6 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
-; --- Convert preserved infected clip on bridge back to correct brush type, as we prevented it from being deleted in global_filters.cfg
-modify:
-{
-	match:
-	{
-		"targetname" "bridge_pz_clip"
-	}
-	replace:
-	{
-		"classname" "func_playerinfected_clip"
-	}
-}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
@@ -842,6 +830,15 @@ add:
 	"OnMapSpawn" "anv_mapfixes_tunneltopcliff_wrongwayb,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_tunneltopcliff_wrongwayc,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_tunneltopcliff_wrongwayd,Kill,,15,-1"
+}
+; --- Prevent infected clip on bridge from being removed
+add:
+{
+	"classname" "func_playerinfected_clip"
+	"targetname" "bridge_pz_clip"
+	"model" "*136"
+	"spawnflags" "2"
+	"Solidity" "2"
 }
 
 ; =====================================================
