--- a/cfg/stripper/maps/c9m2_lots.cfg
+++ b/cfg/stripper/maps/c9m2_lots.cfg
@@ -517,34 +517,34 @@ add:
 ; --- Clipping to fix players needing to jump to get in the escape vehicle
 {
 	"classname" "env_physics_blocker"
-	"origin" "8003 6363 53"
+	"origin" "8003 6363 -53"
 	"mins" "-13 -55 -5"
 	"maxs" "13 55 5"
 	"initialstate" "1"
 	"BlockType" "0"
-	"targetname" "escape_vehicle_step"
+	"targetname" "escape_vehicle_step_a"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "8003 6363 51"
+	"origin" "8003 6363 -51"
 	"mins" "-13 -59 -3"
 	"maxs" "17 59 3"
 	"initialstate" "1"
 	"BlockType" "0"
-	"targetname" "escape_vehicle_step"
+	"targetname" "escape_vehicle_step_b"
 }
-; --- Having the clip start disabled causes collision issues
-;modify:
-;{
-;	match:
-;	{
-;		"targetname" "finale_elevator"
-;	}
-;	insert:
-;	{
-;		"OnFullyOpen" "escape_vehicle_step,Enable,,0,-1"
-;	}
-;}
+modify:
+{
+	match:
+	{
+		"targetname" "finale_elevator"
+	}
+	insert:
+	{
+		"OnFullyOpen" "escape_vehicle_step_a,AddOutput,origin 8003 6363 53,0,-1"
+		"OnFullyOpen" "escape_vehicle_step_b,AddOutput,origin 8003 6363 53,0,-1"
+	}
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
