Readme and other stuff

--- a/cfg/stripper/maps/c8m1_apartment.cfg
+++ b/cfg/stripper/maps/c8m1_apartment.cfg
@@ -667,7 +667,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-
 ; --- Crates in the parking lot
 {
 	"classname" "prop_dynamic"
@@ -873,7 +872,7 @@ add:
 	"OnMapSpawn" "anv_mapfixes_yesdraw_rooftop_3_wrongwayb,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_commvignette_wrongwaya,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_commvignette_wrongwayb,Kill,,15,-1"
-	; --- Clip on roof in far corner of the map
+	; --- Clip on roof back corner of the parking lot
 	"OnMapSpawn" "anv_mapfixes_yesdraw_farcorner_clip,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_yesdraw_farcorner_wrongway,Kill,,15,-1"
 	; --- Clips on the Simon Dairy Products building roof
