--- a/cfg/stripper/maps/c8m3_sewers.cfg
+++ b/cfg/stripper/maps/c8m3_sewers.cfg
@@ -205,7 +205,7 @@ modify:
 		"damagefilter" "warehouse_door_filter_fix"
 	}
 }
-; --- Block standing in windows by the event lift
+; --- Block standing in windows by the event lift - Replaces Valve's commentary blocker
 add:
 {
 	"classname" "env_physics_blocker"
@@ -215,7 +215,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block getting on one of the shelves in the warehouse
+; --- Block standing on one of the shelves in the warehouse
 {
 	"classname" "env_physics_blocker"
 	"origin" "11500 8039 196"
@@ -274,7 +274,7 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
-; --- Fix the fog by the burger tank causing tanks to lose rage even when they have sight
+; --- Fix the fog by the burger tank causing tanks to lose rage even while they have sight
 modify:
 {
 	match:
@@ -364,6 +364,7 @@ add:
 ; ==                  SOUND REMOVAL                  ==
 ; ==    Remove or adjust sounds played by the map    ==
 ; =====================================================
+; --- Removed helicopter sounds
 filter:
 {
 	"targetname" "helicopter_sound"
