--- a/cfg/stripper/maps/c8m4_interior.cfg
+++ b/cfg/stripper/maps/c8m4_interior.cfg
@@ -156,7 +156,7 @@ filter:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Allow ghosts to walk through the breakable walls by the elevator
+; --- Allow ghosts to walk through the breakable walls by the elevator before the event has started
 filter:
 {
 	"targetname" "elevator_breakwalls_01"
