Completed work on c10m1 + c10m2 c1m1 Adjusted LOS blocker under snack machine after elevator c1m1 Added an additional dresser for spawns by the end saferoom (screenshot req) c1m1 Blocked LOS under baggage cart by the end saferoom c1m2 Blocked LOS under van by the stores c2m5 Allowed the 3rd weapon spawn to spawn in the saferoom c12m3 Make the top section of the collapsed bridge block LOS c12m3 Reworked some clipping to stop infected going out of bounds c14m1 Adjusted added ammo pile after the car shop c14m1 Added some failsafes to prevent issues caused by the tank punching the shipping container causing it to disappear

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -167,6 +167,11 @@ add:
 	"normal.z" "[z.00]"
 	"team" "2"
 }
+; --- To fix issues with cloned ladders that go beyond the maps limit (origin on any axis greater than 16384), create a prop and parent the ladder to it
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "[ladder name],SetParent,[prop name],0,-1"
+}
 
 ; #####################  BRUSHES  #####################
 ; --- Create custom sized brushes by using a logic_auto to fire outputs for parameters
@@ -178,14 +183,14 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,mins [-x -y -z],0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,maxs [x y z],0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "[brush name],AddOutput,mins [-x -y -z],0,-1"
+	"OnMapSpawn" "[brush name],AddOutput,maxs [x y z],0,-1"
+	"OnMapSpawn" "[brush name],AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "[brush type]"
 	"origin" "[x y z]"
-	"targetname" "anv_mapfixes_losfix_[brush name]"
+	"targetname" "[brush name]"
 }
 ; --- Cloning an existing brush to create new brush entities
 ; --- Entity specific parameters can be added from here
