--- a/cfg/stripper/maps/c12m3_bridge.cfg
+++ b/cfg/stripper/maps/c12m3_bridge.cfg
@@ -358,193 +358,42 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "5208 -10504 800"
-	"mins" "-1112 -264 -544"
-	"maxs" "1112 264 544"
+	"origin" "6528 -9976 1536"
+	"angles" "0 50 0"
+	"mins" "-1008 -8 -192"
+	"maxs" "1008 8 192"
+	"boxmins" "-1008 -8 -192"
+	"boxmaxs" "1008 8 192"
 	"initialstate" "1"
 	"BlockType" "0"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "5444 -10812 800"
-	"mins" "-332 -44 -544"
-	"maxs" "332 44 544"
+	"origin" "4992 -11368 1536"
+	"angles" "0 35 0"
+	"mins" "-1088 -8 -192"
+	"maxs" "1088 8 192"
+	"boxmins" "-1088 -8 -192"
+	"boxmaxs" "1088 8 192"
 	"initialstate" "1"
 	"BlockType" "0"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "5376 -10904 800"
-	"mins" "-264 -48 -544"
-	"maxs" "264 48 544"
+	"origin" "3592 -12152 1536"
+	"angles" "0 16 0"
+	"mins" "-504 -8 -192"
+	"maxs" "504 8 192"
+	"boxmins" "-504 -8 -192"
+	"boxmaxs" "504 8 192"
 	"initialstate" "1"
 	"BlockType" "0"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "5304 -11000 800"
-	"mins" "-192 -48 -544"
-	"maxs" "192 48 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5236 -11096 800"
-	"mins" "-124 -48 -544"
-	"maxs" "124 48 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5180 -11184 800"
-	"mins" "-68 -48 -544"
-	"maxs" "68 48 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5148 -11248 800"
-	"mins" "-36 -24 -544"
-	"maxs" "36 24 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4604 -11040 800"
-	"mins" "-508 -272 -544"
-	"maxs" "508 272 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4764 -11356 800"
-	"mins" "-228 -44 -544"
-	"maxs" "228 44 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4692 -11452 800"
-	"mins" "-156 -52 -544"
-	"maxs" "156 52 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4732 -11532 800"
-	"mins" "-36 -28 -544"
-	"maxs" "36 28 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4616 -11556 800"
-	"mins" "-80 -52 -544"
-	"maxs" "80 52 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4584 -11632 800"
-	"mins" "-48 -24 -544"
-	"maxs" "48 24 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4316 -11516 800"
-	"mins" "-220 -204 -544"
-	"maxs" "220 204 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4248 -11768 800"
-	"mins" "-152 -48 -544"
-	"maxs" "152 48 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4176 -11864 800"
-	"mins" "-80 -48 -544"
-	"maxs" "80 48 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4136 -11944 800"
-	"mins" "-40 -32 -544"
-	"maxs" "40 32 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5672 -10884 800"
-	"mins" "-32 -28 -544"
-	"maxs" "32 28 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5528 -10980 800"
-	"mins" "-32 -28 -544"
-	"maxs" "32 28 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5392 -11076 800"
-	"mins" "-32 -28 -544"
-	"maxs" "32 28 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5024 -11340 800"
-	"mins" "-32 -28 -544"
-	"maxs" "32 28 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4880 -11428 800"
-	"mins" "-32 -28 -544"
-	"maxs" "32 28 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4432 -11748 800"
-	"mins" "-32 -28 -544"
-	"maxs" "32 28 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4288 -11844 800"
-	"mins" "-32 -28 -544"
-	"maxs" "32 28 544"
+	"origin" "3088 -12280 1536"
+	"mins" "-16 -8 -192"
+	"maxs" "16 8 192"
 	"initialstate" "1"
 	"BlockType" "0"
 }
@@ -566,9 +415,9 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "5028 -11640 576"
-	"mins" "-372 -240 -320"
-	"maxs" "372 240 320"
+	"origin" "5028 -11640 536"
+	"mins" "-372 -240 -280"
+	"maxs" "372 240 280"
 	"initialstate" "1"
 	"BlockType" "0"
 }
@@ -577,54 +426,6 @@ add:
 	"origin" "4316 -11740 576"
 	"mins" "-340 -340 -320"
 	"maxs" "340 340 320"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "3524 -12040 800"
-	"mins" "-452 -24 -544"
-	"maxs" "452 24 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "3440 -12088 800"
-	"mins" "-368 -24 -544"
-	"maxs" "368 24 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "3360 -12136 800"
-	"mins" "-288 -24 -544"
-	"maxs" "288 24 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "3276 -12184 800"
-	"mins" "-204 -24 -544"
-	"maxs" "204 24 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "3196 -12232 800"
-	"mins" "-124 -24 -544"
-	"maxs" "124 24 544"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "3156 -12268 800"
-	"mins" "-84 -12 -544"
-	"maxs" "84 12 544"
 	"initialstate" "1"
 	"BlockType" "0"
 }
@@ -714,6 +515,37 @@ add:
 	"model" "models/props_wasteland/rock_cliff01.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+}
+; --- Make the top section of the collapsed bridge block LOS
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "los_collapsed_bridge_top_before,AddOutput,mins -51 -500 -0.05,0,-1"
+	"OnMapSpawn" "los_collapsed_bridge_top_before,AddOutput,maxs 51 500 0.05,0,-1"
+	"OnMapSpawn" "los_collapsed_bridge_top_before,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "los_collapsed_bridge_top_after,AddOutput,mins -51 -166 -0.05,0,-1"
+	"OnMapSpawn" "los_collapsed_bridge_top_after,AddOutput,maxs 51 166 0.05,0,-1"
+	"OnMapSpawn" "los_collapsed_bridge_top_after,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "5933 -12812 271"
+	"targetname" "los_collapsed_bridge_top_before"
+}
+{
+	"classname" "func_brush"
+	"origin" "5933 -12473 271"
+	"targetname" "los_collapsed_bridge_top_after"
+}
+modify:
+{
+	match:
+	{
+		"targetname" "boxcar_path2"
+	}
+	insert:
+	{
+		"OnPass" "los_collapsed_bridge_top_before,Kill,,0,-1"
+	}
 }
 
 
