This isnt ready yet

--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -43,7 +43,7 @@ add:
 	; --- Called by director script when tank spawns
 	"OnUser1" "OnslaughtFlowChecker,RunScriptCode,OnslaughtGetStartingFlow(),0,-1"
 	; --- Clear bypass markers
-	"OnUser2" "OnslaughtFlowChecker,RunScriptCode,KillBypassMarkers(),0,-1"
+	;"OnUser2" "OnslaughtFlowChecker,RunScriptCode,KillBypassMarkers(),0,-1"
 }
 modify:
 {
@@ -53,7 +53,7 @@ modify:
 	}
 	insert:
 	{
-		"OnPressed" "OnslaughtFlowChecker,FireUser2,,0,-1"
+		;"OnPressed" "OnslaughtFlowChecker,FireUser2,,0,-1"
 		"OnPressed" "OnslaughtFlowChecker,Kill,,1,-1"
 	}
 }
