--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -988,7 +988,7 @@ add:
 ; --- Infected ladder to get to the top floor of the Jones & Sons building exit
 {
 	"classname" "func_simpleladder"
-	"origin" "2041 3243 -65"
+	"origin" "2076 3246 -65"
 	"angles" "0 90 0"
 	"model" "*36"
 	"normal.x" "0.00"
@@ -998,7 +998,7 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "46 3661 112"
+	"origin" "82 3664 368"
 	"angles" "0 180 0"
 	"model" "models/props_rooftop/gutter_pipe_256.mdl"
 	"solid" "0"
@@ -1006,26 +1006,26 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "46 3661 240"
+	"origin" "82 3664 112"
 	"angles" "0 180 0"
-	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
 	"solid" "0"
 	"disableshadows" "1"
 }
 ; --- Clipping to help infected get into the windows
 {
 	"classname" "env_physics_blocker"
-	"origin" "126 3672 15"
-	"mins" "-27 -8 -2"
-	"maxs" "27 8 2"
+	"origin" "157 3669 15"
+	"mins" "-45 -5 -1"
+	"maxs" "45 5 1"
 	"initialstate" "1"
 	"BlockType" "2"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "126 3672 175"
-	"mins" "-27 -8 -2"
-	"maxs" "27 8 2"
+	"origin" "157 3669 175"
+	"mins" "-45 -5 -1"
+	"maxs" "45 5 1"
 	"initialstate" "1"
 	"BlockType" "2"
 }
@@ -1037,6 +1037,38 @@ add:
 	"model" "*92"
 	"normal.x" "0.00"
 	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on food cart outside the jazz club
+{
+	"classname" "func_simpleladder"
+	"origin" "-2628.5 5190 -53"
+	"angles" "0 270 0"
+	"model" "*92"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladders to climb on AC units outside the jazz club
+{
+	"classname" "func_simpleladder"
+	"origin" "4297 4587 155.83"
+	"angles" "0 90 0"
+	"model" "*85"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-1946 5215.31 281.83"
+	"angles" "0 270 0"
+	"model" "*85"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
 }
