c12m3 Made the event stop once survivors reach the saferoom c2m4 Made the event stop once survivors reach the saferoom c6m2 Made the event stop once survivors reach the stairs by the saferoom Updated template for removing TLS entities

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -239,16 +239,6 @@ add:
 ; --- No parameter override, no delay, allow firing more than once (default)
 "[output named]" "[target entities named],[via this input],,0,-1"
 
-; --- Method for removing _commentary.txt / lump / anv_mapfixes.nut entities
-; --- Use logic_auto to do this on a delay after the map has loaded, since they are spawned after the map is loaded
-; --- NOTE: For gamemode specific changes use info_gamemode and fire outputs On[Gamemode]PostIO
-add:
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "[entity targetname or classname],Kill,,10,-1"
-}
-
-
 ; #####################  NAV MESH  ####################
 ; --- Entities for modifying anything nav mesh related
 ; --- point_nav_attribute_region can be used to assign attributes to nav mesh regions defined by the spawnflags used
@@ -287,4 +277,25 @@ add:
 	"targetname" "[brush name]"
 	"teamToBlock" "[n]"
 	"affectsFlow" "0"
+}
+
+
+; #####################  REMOVE SCRIPT BASED CHANGES  ####################
+; --- Use this method to remove changes applied by anv_* scripts
+; --- Loading modified versions of official scripts will replace them and prevent changes from future updates from being applied to the server
+; --- NOTE: If there are issues with removing entities, increase the delay value
+; --- NOTE: For gamemode specific changes, info_gamemode can be used with the input On[Gamemode Name]PostIO
+add:
+{
+	"classname" "logic_auto"
+	; --- Entities to remove
+	"OnMapSpawn" "anv_mapfixes_[entity name],Kill,,15,-1"
+}
+
+; --- Use this method to remove env_player_blocker entities from Valve's _commentary.txt files
+; --- To keep specific blockers, simply copy their values from the _commentary.txt files and insert them below this, but with their classname changed to env_physics_blocker
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
 }
