--- a/cfg/stripper/maps/c12m3_bridge.cfg
+++ b/cfg/stripper/maps/c12m3_bridge.cfg
@@ -24,6 +24,24 @@ modify:
 		"OnTrigger" "director,BeginScript,c12m3_onslaught_rework,0,-1"
 	}
 }
+; --- Stop the event once survivors reach the saferoom
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,mins -164 -114 -84,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,maxs 164 114 84,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,boxmins -164 -114 -84,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,boxmaxs 164 114 84,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "trigger_once"
+	"origin" "7704 -11362 524"
+	"targetname" "event_stop_trigger"
+	"filtername" "filter_survivor"
+	"spawnflags" "1"
+	"OnTrigger" "director,EndScript,,0,-1"
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
