--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -169,6 +169,25 @@ add:
 	"classname" "logic_auto"
 	"OnMapSpawn" "nav_sewer_drop_obscured,ApplyNavAttributes,,10,-1"
 }
+; --- Stop the event once survivors reach the stairs by the saferoom
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,mins -64 -32 -104,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,maxs 64 32 104,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,boxmins -64 -32 -104,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,boxmaxs 64 32 104,0,-1"
+	"OnMapSpawn" "event_stop_trigger,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "trigger_once"
+	"origin" "9904 5425 -936"
+	"targetname" "event_stop_trigger"
+	"filtername" "filter_survivor"
+	"spawnflags" "1"
+	"OnTrigger" "director,EndScript,,0,-1"
+	"OnTrigger" "event_stop_trigger,Kill,,1,-1"
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
